@@ -15,6 +15,7 @@ Scala Common Enrich: created ScalazJson4sUtils.scala
 Scala Common Enrich: created enrichmentConfigs.scala
 Scala Common Enrich: added tests for ScalazJson4sUtils and enrichmentConfigs
 Scala Hadoop Enrich: bumped to Scala Common Enrich 0.5.0                                - TODO
+Scala Hadoop Enrich: created EnrichmentConfigRegistry.scala
 Scala Hadoop Enrich: passed etl_tstamp into Scala Common Enrich (#817)
 Scala Hadoop Enrich: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#835)
 Redshift: bumped table-def to 0.4.0
